--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,37 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+    background-color: #fff;
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1em;
+    margin: 0;
+  }
 
-h1 {
-  color: #375e97;
-  font-size: 2em;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  border-bottom: 1px solid #375e97;
-}
+  h1 {
+    color: hotpink;
+    font-size: 2em;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    border-bottom: 10px dotted purple;
+  }
 
-h2 {
-  font-size: 1.5em;
-}
+  h2 {
+    font-size: 1.5em;
+  }
 
-.job-title {
-  color: #999999;
-  font-weight: bold;
-}
+  .job-title {
+    color: #999999;
+    font-weight: bold;
+  }
 
-a:link, a:visited {
-  color: #fb6542;
-}
+  a:link,
+  a:visited {
+    color: #fb6542;
+  }
 
-a:hover {
-  text-decoration: none;
-}
+  a:hover {
+    text-decoration: none;
+    color: green;
+  }
+  ul{
+    background-color: #eeeeee;
+    border: 5px solid purple;
+  }
